# nrps-a-domain-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: training.yaml
data/: results_rf_substrate.tsv
data/residue/: 8angstrom.txt  ig13f.txt  ig13f_intersect_8angstrom.txt  ig13f_union_8angstrom.txt  ig13f_union_stachelhaus.txt  ig15b.txt  ig15b_intersect_8angstrom.txt  ig15b_intersect_stachelhaus.txt  ig15b_union_8angstrom.txt  ig15b_union_stachelhaus.txt  stachelhaus.txt
data/residue/pipeline_k_selection_peak_benchmark_substrates/: cv_ig_fungal_test_fungal.csv  ranking_ig_fungal_test_fungal.csv  summary_fungal_test_fungal.csv
data/sequence/: P0C061.fasta  benchmark_bacterial.fasta  benchmark_fungal.fasta  dataset.fasta  dataset.tsv
data/sequence/msa/: dataset_msa_mapping.csv
data/substrate/: all_substrates.txt  benchmark_substrates_bacterial.txt  benchmark_substrates_fungal.txt  common_substrates.txt  common_substrates_bacterial.txt  common_substrates_fungal.txt
script/: demo.sh
script/featurisation/: featurisation_models.py  pipeline_k_selection.py
script/model_training/: rf_substrate_classifier.py
